Closed Bug 605309 Opened 14 years ago Closed 14 years ago

DesktopNotificationCenter gets itself in leak cycles

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: jruderman, Assigned: dougt)

References

Details

(Keywords: memory-leak, testcase)

Attachments

(3 files)

Attached file testcase
1. Load the testcase 2. Quit Firefox Result: leak nsGlobalWindow+
Attached file leak log
blocking2.0: --- → ?
OS: Mac OS X → Windows 7
OS: Windows 7 → Mac OS X
Attached patch patchSplinter Review
Assignee: nobody → doug.turner
Attachment #484206 - Flags: review?(jst)
Attachment #484206 - Flags: review?(jst) → review+
blocking2.0: ? → betaN+
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
Component: DOM: Mozilla Extensions → DOM
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: