Bug 605309 - DesktopNotificationCenter gets itself in leak cycles. r=jst a=blocking-betaN